next button, graph6 hover

--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -1798,6 +1798,7 @@ input:checked + label .description{
   border-radius: 25px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 10;
+  /* hiiiiiiiiiiii */
 }
 .graph6_line-1 {
     width: 2px; 
