--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -2631,31 +2631,800 @@ input:checked + label .description{
     margin: 0px 25px 15px 0;
 }
 
-/*@media screen and (max-width:1370px ) {
-  #LN1{
-    margin-bottom: 156px;
-    margin-left: 154px;
+@media screen and (max-width:1366px ) {
+  
+#LN1{
+  margin-bottom: 156px;
+  margin-left: 154px;
+  animation: stretchline1 1s linear forwards; 
+  animation-delay: 1s;
+}
+
+@keyframes stretchline1 {
+  0% {
+    height: 0;
   }
-  #LN4{
-    margin-top: 451px;
-    margin-left: 310px;
-    margin-bottom: -300px;
+  50% {
+    height: 3%; 
   }
-  #LN7{
-    margin-left: 406px;
-    margin-bottom: 155px;
+  100% {
+    height: 5.4%;
   }
-  #LN9{
-    margin-top: 449px;
-    margin-left: 454px;
+}
+#LN4{
+  margin-top: 455px;
+  margin-left: 360px;
+  margin-bottom: -300px; 
+  animation: stretchline4 1s linear forwards; 
+  animation-delay: 3s;
+}
+  
+  @keyframes stretchline4 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 3%; 
+    }
+    100% {
+      height: 5.4%;
+    }
   }
-  .graph2_Line-2{
+#LN7{
+  margin-left: 455px;
+  margin-bottom: 157px;
+  animation: stretchline7 1s linear forwards; 
+  animation-delay: 5s;
+}
+
+@keyframes stretchline7 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3%; 
+  }
+  100% {
+    height: 5.7%;
+  }
+}
+#LN9{
+  margin-top: 451px;
+  margin-left: 504px;
+  animation: stretchline9 1s linear forwards;  
+  animation-delay: 7s;
+}
+
+@keyframes stretchline9 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3%; 
+  }
+  100% {
+    height: 5.8%;
+  }
+}
+.graph2_Line-2{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    bottom: 0;
+    left: 68;
+    animation: stretchGLine1 1s linear forwards; 
+    animation-delay: 1s;
     margin-left: 155px;
     margin-bottom: 241.5px;
   }
-  .graph2_Line-4{
-    margin-top: 361.9px;
-    margin-left: 363px;
+  
+ @keyframes stretchGLine1 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 3%; 
+    }
+    100% {
+      height: 5.8%;
+    }
+}
+.graph2_Line-4{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    top: 0;
+    left: 68px; 
+    animation: stretchGLine4 1s linear forwards; 
+    animation-delay: 3s;
+    margin-top: 365.9px;
+    margin-left: 413px;
     margin-bottom: -300px;
   }
+  
+  @keyframes stretchGLine4 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 6.1%; 
+    }
+    100% {
+      height: 11.5%;
+    }
+}/*
+.graph2_Line-6{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    bottom: 0;
+    left: 68px; 
+    animation: stretchGLine7 1s linear forwards; 
+    animation-delay: 5s;
+    margin-left: 337px;
+    margin-bottom: 185.5px;
+    
+  }
+  
+  @keyframes stretchGLine7 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 3%; 
+    }
+    100% {
+      height: 6%;
+    }
 }*/
+.graph2_Line-8{
+    width: 0;
+    height: 2px; 
+    background-color: blue;
+    position: relative;
+    animation: stretchGLine7 1s linear forwards; 
+    animation-delay: 6s;
+    margin-left: 245px;
+    margin-top: 2px;
+  }
+  
+  @keyframes stretchGLine7 {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 8.75%; 
+    }
+    100% {
+      width: 17.5%;
+    }
+}
+.graph2_Line-11{
+    width: 2px; 
+    height: 0;
+    background-color: blue;
+    position: absolute;
+    top: 0;
+    left: 68px; 
+    animation: stretchGLine11 1s linear forwards; 
+    animation-delay: 9s;
+    margin-top: 366.9px;
+    margin-left: 604px;
+    margin-bottom: -300px;
+  }
+  
+  @keyframes stretchGLine11 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 3.1%; 
+    }
+    100% {
+      height: 5.7%;
+    }
+}
+.graph3_line-2{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  left: 68;
+  animation: stretchG3Line1 1s linear forwards; 
+  animation-delay: 1s;
+  margin-left: 155px;
+  margin-bottom: 205px;
+}
+
+@keyframes stretchG3Line1 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 6.2%; 
+  }
+  100% {
+    height: 11.9%;
+  }
+}
+.graph3_line-4{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  top: 0;
+  left: 68px; 
+  animation: stretchG3Line4 1s linear forwards; 
+  animation-delay: 3s;
+  margin-top: 364px;
+  margin-left: 559px;
+  margin-bottom: -300px;
+}
+
+@keyframes stretchG3Line4 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 6.2%; 
+  }
+  100% {
+    height: 11.9%;
+  }
+}
+.graph3_line-6{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  left: 68;
+  animation: stretchG3Line6 1s linear forwards; 
+  animation-delay: 5s;
+  margin-left: 340px;
+  margin-bottom: 204px;
+}
+
+@keyframes stretchG3Line6 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 6.2%; 
+  }
+  100% {
+    height: 11.9%;
+  }
+}
+.graph3_line-8{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  top: 0;
+  left: 68px; 
+  animation: stretchG3Line8 1s linear forwards; 
+  animation-delay: 7s;
+  margin-top: 364px;
+  margin-left: 704px;
+  margin-bottom: -300px;
+}
+
+@keyframes stretchG3Line8 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 6.2%; 
+  }
+  100% {
+    height: 11.9%;
+  }
+}
+.graph4_line-1{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  left: 68;
+  animation: stretchG4Line1 1s linear forwards; 
+  margin-left: 155px;
+  margin-bottom: 164.5px;
+}
+
+@keyframes stretchG4Line1 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3.2%; 
+  }
+  100% {
+    height: 6.4%;
+  }
+}
+.graph4_line-3 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  top: 0;
+  margin-left: 174px;
+  margin-top: 437px;
+  margin-bottom: 0px;
+  animation: stretchG4Line3 1s linear forwards; 
+  animation-delay: 2s;
+}
+
+.graph4_line-3::after {
+  content: '';
+  position: absolute;
+  top: 36px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow 0.5s forwards;
+  animation-delay: 3s;
+}
+@keyframes stretchG4Line3 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 37px; 
+  }
+}
+@keyframes showArrow {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph4_line-4{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  left: 68;
+  animation: stretchG4Line4 1s linear forwards; 
+  animation-delay: 3s;
+  margin-left: 199px;
+  margin-bottom: 166.5px;
+}
+
+@keyframes stretchG4Line4 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3.2%; 
+  }
+  100% {
+    height: 6.6%;
+  }
+}
+.graph4_line-6 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  top: 0;
+  margin-top: 437px;
+  margin-left: 218px;
+  margin-bottom: 0px;
+  animation: stretchG4Line6 1s linear forwards; 
+  animation-delay: 5s;
+}
+
+.graph4_line-6::after {
+  content: '';
+  position: absolute;
+  top: 36px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow6 0.5s forwards;
+  animation-delay: 6s;
+}
+@keyframes stretchG4Line6 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 37px; 
+  }
+}
+@keyframes showArrow6 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph4_line-7{
+  width: 2px; 
+  height: 0;
+  background-color: blue;
+  position: absolute;
+  bottom: 0;
+  left: 68;
+  animation: stretchG4Line7 1s linear forwards; 
+  animation-delay: 6s;
+  margin-left: 340px;
+  margin-bottom: 166.5px;
+}
+
+@keyframes stretchG4Line7 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3.2%; 
+  }
+  100% {
+    height: 6.4%;
+  }
+}
+.graph4_line-9 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  margin-left: 359px;
+  top: 0;
+  margin-top: 437px;
+  margin-bottom: 0px;
+  animation: stretchG4Line9 1s linear forwards; 
+  animation-delay: 8s;
+}
+
+.graph4_line-9::after {
+  content: '';
+  position: absolute;
+  top: 36px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow6 0.5s forwards;
+  animation-delay: 9s;
+}
+@keyframes stretchG4Line9 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 37px; 
+  }
+}
+@keyframes showArrow9 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-1 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  bottom: 0;
+  margin-left: 110px;
+  margin-top: 0px;
+  margin-bottom: 197px;
+  animation: stretchG6Line1 1s linear forwards; 
+}
+
+.graph6_line-1::after {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow1 0.5s forwards;
+  animation-delay: 1s;
+}
+@keyframes stretchG6Line1 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow1 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-3 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  top: 0;
+  margin-left: 174px;
+  margin-top: 356px;
+  margin-bottom: 0px;
+  animation: stretchG6Line3 1s linear forwards; 
+  animation-delay: 2s;
+}
+
+.graph6_line-3::after {
+  content: '';
+  position: absolute;
+  top: 86px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow63 0.5s forwards;
+  animation-delay: 3s;
+}
+@keyframes stretchG6Line3 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow63 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-5 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  bottom: 0;
+  margin-left: 220px;
+  margin-top: 0px;
+  margin-bottom: 198px;
+  animation: stretchG6Line5 1s linear forwards; 
+  animation-delay: 4s;
+}
+
+.graph6_line-5::after {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow5 0.5s forwards;
+  animation-delay: 5s;
+}
+@keyframes stretchG6Line5 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow5 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-7 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  top: 0;
+  margin-left: 244px;
+  margin-top: 356px;
+  margin-bottom: 0px;
+  animation: stretchG6Line7 1s linear forwards; 
+  animation-delay: 6s;
+}
+
+.graph6_line-7::after {
+  content: '';
+  position: absolute;
+  top: 86px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow7 0.5s forwards;
+  animation-delay: 7s;
+}
+@keyframes stretchG6Line7 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow7 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-9 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  bottom: 0;
+  margin-left: 292px;
+  margin-top: 0px;
+  margin-bottom: 198px;
+  animation: stretchG6Line9 1s linear forwards; 
+  animation-delay: 8s;
+}
+
+.graph6_line-9::after {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow9 0.5s forwards;
+  animation-delay: 9s;
+}
+@keyframes stretchG6Line9 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow9 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-11 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  top: 0;
+  margin-left: 364px;
+  margin-top: 356px;
+  margin-bottom: 0px;
+  animation: stretchG6Line11 1s linear forwards; 
+  animation-delay: 10s;
+}
+
+.graph6_line-11::after {
+  content: '';
+  position: absolute;
+  top: 86px;
+  left: 50%;
+  transform: translateX(-50%) rotate(90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow11 0.5s forwards;
+  animation-delay: 11s;
+}
+@keyframes stretchG6Line11 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow11 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+.graph6_line-13 {
+  width: 2px; 
+  height: 0; 
+  background-color: blue; 
+  position: absolute;
+  bottom: 0;
+  margin-left: 389px;
+  margin-top: 0px;
+  margin-bottom: 198px;
+  animation: stretchG6Line13 1s linear forwards; 
+  animation-delay: 12s;
+}
+
+.graph6_line-13::after {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: 50%;
+  transform: translateX(-50%) rotate(-90deg); 
+  width: 6px; 
+  height: 6px; 
+  background-color: blue; 
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  opacity: 0; 
+  animation: showArrow13 0.5s forwards;
+  animation-delay: 13s;
+}
+@keyframes stretchG6Line13 {
+  0% {
+      height: 0;
+  }
+  100% {
+      height: 87px; 
+  }
+}
+@keyframes showArrow13 {
+0% {
+    opacity: 0; 
+}
+100% {
+    opacity: 1; 
+}
+}
+
+
+}
