--- a/dascy_frontend/src/Pages/PhyLayer/idOne/idOneFirst.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idOne/idOneFirst.css
@@ -2225,7 +2225,7 @@ body {
 .dascy_laws_description h4 {
   text-transform: uppercase;
   color: #AA2EE6;
-}
+}/*nnnnnnnnnnnnnnnnnnnnnn*/
 
 input {
   display: none;
