--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -52,7 +52,7 @@
   display: flex;
   flex-direction: row;
 }
-.icon{
+.icon1{
   background-color: #110218;
   color: white;
   border-radius: 50%;
